fix: overflow scroll bar

--- a/src/components/Charts/SpaceChart.less
+++ b/src/components/Charts/SpaceChart.less
@@ -2,7 +2,6 @@
   padding: 12px 0;
   overflow: auto;
   height: 100%;
-  max-height: 240px;
   overflow-y: auto;
 
   >.tip {
